# windmill-engine

./: .clang-format  .clang-tidy  .clang-tidy.bak  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakePresets.json.bk  LICENSE  README.md  Setup.bat  Setup.command  Setup.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  (+2 more)
Engine/: CMakeLists.txt  CMakePresets.json
Engine/Config/: Engine.ini
Engine/Misc/: WindmillEngine.natvis
Engine/Source/Launchers/: CMakeLists.txt  Launcher.cpp
Engine/Source/Launchers/Linux/: LinuxLauncher.cpp
Engine/Source/Launchers/Windows/: WindowsLauncher.cpp
Engine/Source/Modules/Core/: CMakeLists.txt  Concepts.hpp  Globals.cpp  Globals.hpp  Types.hpp
Engine/Source/Modules/Core/Benchmark/: CMakeLists.txt  CoreUTests.cpp
Engine/Source/Modules/Core/Benchmark/Containers/: ArrayBenchmark.h  SetBenchmark.h  StringBenchmark.h
Engine/Source/Modules/Core/Benchmark/HAL/: PathBenchmark.h
Engine/Source/Modules/Core/Console/: ConfigFile.cpp  ConfigFile.hpp
Engine/Source/Modules/Core/Containers/: Allocator.hpp  Array.hpp  ArrayView.hpp  ContainerFwd.hpp  Map.hpp  Set.hpp  Span.hpp  String.cpp  StringBuilder.cpp  StringBuilder.hpp  StringFormat.cpp  StringFormatter.cpp  StringFormatter.hpp  StringUtils.cpp  StringUtils.hpp  StringView.hpp  WeString.hpp
Engine/Source/Modules/Core/Encoding/: AnsiEncoder.cpp  AnsiEncoder.hpp  IEncoder.hpp  UTF8Encoder.cpp  UTF8Encoder.hpp
Engine/Source/Modules/Core/HAL/: File.cpp  File.hpp  FileSystem.cpp  FileSystem.hpp  Path.cpp  Path.hpp  Timestamp.hpp.in
Engine/Source/Modules/Core/HAL/Interfaces/: IFileSystem.hpp
Engine/Source/Modules/Core/Hashing/: CRC32.cpp  CRC32.hpp
Engine/Source/Modules/Core/Iterators/: LineIterator.hpp
Engine/Source/Modules/Core/Logging/: ILogSink.hpp  Log.cpp  Log.hpp  LogEmitter.hpp  LogFileSink.cpp  LogFileSink.hpp  LogLevel.hpp  LogMessage.hpp  OSLogSink.hpp  StdLogSink.cpp  StdLogSink.hpp
Engine/Source/Modules/Core/Math/: MathUtils.hpp  Random.hpp
Engine/Source/Modules/Core/Memory/: Memory.hpp  MemoryManager.cpp  MemoryManager.hpp  MemoryUtils.hpp
Engine/Source/Modules/Core/Misc/: ULID.cpp  ULID.hpp
Engine/Source/Modules/Core/OS/: ITimestamp.hpp  OS.hpp  OSEntry.hpp  StringConvertion.hpp  Utils.hpp
Engine/Source/Modules/Core/Serialization/: Archive.cpp  Archive.hpp  BinaryArchive.cpp  BinaryArchive.hpp  IArchive.hpp  MemoryReader.cpp  MemoryReader.hpp  MemoryWriter.cpp  MemoryWriter.hpp
Engine/Source/Modules/Core/Tests/: CMakeLists.txt  CoreUTests.cpp
Engine/Source/Modules/Core/Tests/Containers/: ArrayBenchmark.cc  ArrayBenchmark.h  SetBenchmark.cc  SetBenchmark.h  StringBenchmark.cc  StringBenchmark.h
Engine/Source/Modules/Core/Tests/HAL/: PathBenchmark.cc  PathBenchmark.h  TimestampTest.cc  TimestampTest.h
Engine/Source/Modules/Core/Tests/Misc/: ULIDTest.cc
Engine/Source/Modules/Core/Tests/Serialization/: ArchiveTest.cc  MemoryArchive.cc
Engine/Source/Modules/Core/Text/: CommonFormatters.cpp  CommonFormatters.hpp  NumericFormatter.hpp  NumericParser.hpp
Engine/Source/Modules/Engine/: CMakeLists.txt  Engine.cpp  Engine.hpp
Engine/Source/Modules/Engine/Classes/: Texture.hpp  WTexture.cpp
Engine/Source/Modules/Linux/: CMakeLists.txt
Engine/Source/Modules/Linux/HAL/: LinuxFileSystem.cpp  LinuxFileSystem.hpp  LinuxTimestamp.cpp  LinuxTimestamp.hpp
Engine/Source/Modules/Linux/OS/: LinuxOS.cpp  LinuxSC.cpp
Engine/Source/Modules/Windows/: CMakeLists.txt  WindowsInclude.hpp
Engine/Source/Modules/Windows/HAL/: WindowsFileSystem.cpp  WindowsFileSystem.hpp  WindowsPaths.cpp  WindowsTimestamp.cpp  WindowsTimestamp.hpp
Engine/Source/Modules/Windows/Logging/: WindowsOutputLogSink.cpp  WindowsOutputLogSink.hpp
Engine/Source/Modules/Windows/OS/: WindowsOS.cpp  WindowsStringConvertion.cpp  WindowsUtils.cpp
Engine/Source/Tools/Bailiff/: CMakeLists.txt  Main.cpp
Engine/Source/Tools/Bailiff/Exceptions/: BailiffException.hpp
Engine/Source/Tools/Bailiff/Project/: BailiffProject.cpp  BailiffProject.hpp
Engine/Source/Tools/Bailiff/Tests/: CMakeLists.txt
Engine/Source/Tools/Bailiff/Tests/Project/: TestCreate.cc
Engine/Source/Tools/Scribe/: Attributes.cpp  Attributes.hpp  CMakeLists.txt  Main.cpp  Processor.cpp  README.md  ScribeExceptions.hpp
Engine/Source/Tools/Scribe/Attributes/: AttrProperty.cpp  AttrProperty.hpp
Misc/: WindmillEngine.natvis
Source/Modules/Core/: CMakeLists.txt  Concepts.hpp  Globals.hpp  Types.hpp
Source/Modules/Core/Benchmark/: CMakeLists.txt  CoreUTests.cpp
Source/Modules/Core/Benchmark/Containers/: ArrayBenchmark.cpp  ArrayBenchmark.h  StringBenchmark.cpp  StringBenchmark.h
Source/Modules/Core/Benchmark/HAL/: PathBenchmark.h
Source/Modules/Core/Containers/: Allocator.hpp  Array.hpp  ArrayView.hpp  ContainerFwd.hpp  IFormattable.hpp  Map.hpp  Set.hpp  String.cpp  StringBuilder.cpp  StringBuilder.hpp  StringFormat.cpp  StringFormattable.hpp  StringFormatter.hpp  StringUtils.cpp  StringUtils.hpp  WeString.hpp
Source/Modules/Core/Encoding/: AnsiEncoder.cpp  AnsiEncoder.hpp  UTF8Encoder.cpp  UTF8Encoder.hpp
Source/Modules/Core/HAL/: File.cpp  File.hpp  FileSystem.cpp  FileSystem.hpp  Path.cpp  Path.hpp
Source/Modules/Core/HAL/Interfaces/: IFileSystem.hpp
Source/Modules/Core/Hashing/: TypesHash.hpp
Source/Modules/Core/Logging/: ILogSink.hpp  Log.cpp  Log.hpp  LogEmitter.hpp  LogFileSink.cpp  LogFileSink.hpp  LogLevel.hpp  LogMessage.hpp  StdLogSink.cpp  StdLogSink.hpp
Source/Modules/Core/Math/: MathUtils.hpp
Source/Modules/Core/Memory/: Memory.hpp  MemoryManager.cpp  MemoryManager.hpp  MemoryUtils.hpp
Source/Modules/Core/OS/: OS.hpp  OSEntry.hpp  StringConvertion.hpp  Utils.hpp
Source/Modules/Core/Text/: NumericFormatter.hpp
Source/Modules/Engine/: CMakeLists.txt  Engine.cpp  Engine.hpp
Source/Modules/Engine/Classes/: WTexture.hpp
Source/Modules/Windows/: CMakeLists.txt  WindowsInclude.hpp
Source/Modules/Windows/HAL/: WindowsFileSystem.cpp  WindowsFileSystem.hpp
Source/Modules/Windows/OS/: WindowsOS.cpp  WindowsUtils.cpp
(+17 files in other folders)
